--- a/contact.html
+++ b/contact.html
@@ -296,10 +296,8 @@
     <nav>
         <ul>
             <li><a href="index.html"><strong>Ken</strong></a></li>
-            <li><a href="blog.html">Blog</a></li>
+            <li><a href="writing.html">Writing</a></li>
             <li><a href="now.html">Now</a></li>
-            <li><a href="quotes.html">Quotes</a></li>
-            <li><a href="book-registry.html">Book Registry</a></li>
         </ul>
     </nav>
 
@@ -332,10 +330,6 @@
                 </div>
             </form>
     </main>
-
-    <footer>
-        <p>&copy; 2025 Ken Gatera. All rights reserved.</p>
-    </footer>
 
     <script>
         // Contact form handling
