--- a/index.html
+++ b/index.html
@@ -105,8 +105,14 @@
             color: #000000;
         }
 
+        .home-header p {
+            font-size: 1.1rem;
+            color: #333333;
+            margin-bottom: 1.5rem;
+        }
+
         .home-header .subtitle {
-            font-size: clamp(1.25rem, 2vw, 1.4rem);
+            font-size: 1.1rem;
             color: #333333;
             margin-bottom: 3rem;
         }
@@ -224,21 +230,20 @@
     <nav>
         <ul>
             <li><a href="index.html" class="active"><strong>Ken</strong></a></li>
-            <li><a href="blog.html">Blog</a></li>
+            <li><a href="writing.html">Writing</a></li>
             <li><a href="now.html">Now</a></li>
-            <li><a href="quotes.html">Quotes</a></li>
-            <li><a href="book-registry.html">Book Registry</a></li>
         </ul>
     </nav>
 
     <main>
         <div class="home-header">
-            <p class="subtitle">Hi, I'm Ken!</p>
+            <p></strong>PROJECT LEADER</strong><p>
         </div>
-        <div class="home-content">
-            <p>Welcome to my corner of the internet. A place to record my thoughts and to connect with curious, thoughtful people along the way.</p>
-            <p>I enjoy solving problems, philosophizing, and desgining minimal interiors. I tend to collect hobbies, learning deeply before moving on. Following curiosity has led me through seemingly unrelated fields: robotics through mechanical engineering, the human body and physical training, construction management, and more recently, media through writing, coding, and DJing.</p>
-            <p>Here I collect thoughts on building things (structures, skills, understanding) and the threads I've found moving between them.</p>
+        <div class="home-content"> 
+            <p>I’m fascinated by how things get built — not just physically, but organizationally. Over the past decade, following my curiosity has taken me through robotics, industrial automation, and construction management. Across each field, I’ve come to see projects as problems best solved by breaking them into measurable components, building feedback loops around each unit, and iterating until the whole system performs reliably.</p>
+            <p>Leading complex construction projects taught me that success depends as much on coordination, incentives, and decision quality as it does on technical design. Working with clients, contractors, designers, and other professionals has shaped how I approach execution: clarity beats complexity, and well-designed systems outperform heroic effort under pressure.</p>
+            <p>Over time, I’ve become increasingly interested in the systems behind consistent performance — how projects, teams, and organizations are structured to deliver reliably across phases, constraints, and from planning through delivery.</p>
+            <p>This space documents lessons from delivering complex high-stakes projects, improving organizational workflows, and applying systems thinking to complex, real-world operating environments.</p>
         </div>
     </main>
 
@@ -246,7 +251,6 @@
         <div class="contact-link">
             <p><a href="contact.html">Get In Touch</a></p>
        </div>
-       <p>&copy; 2025 Ken Gatera. All rights reserved.</p>
     </footer>
 </body>
 </html>
