--- a/now.html
+++ b/now.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Now - Ken Gatera</title>
+    <title>Now - Ken</title>
     <style>
         * {
             margin: 0;
@@ -113,9 +113,18 @@
             color: #000000;
         }
 
+        .now-header h2 {
+            font-size: 1.5rem;
+            font-weight: 700;
+            color: #000000;
+            margin-bottom: 0.5rem;
+            text-decoration: underline;
+        }
+
         .now-header p {
-            font-size: 1.25rem;
+            font-size: 1.1rem;
             color: #333333;
+            font-style: italic;
         }
 
         .now-content {
@@ -166,8 +175,24 @@
             text-decoration: underline;
         }
 
-        .contact-link {
+        .now-page-note {
             margin-top: 4rem;
+            text-align: center;
+            color: #666666;
+            font-size: 0.9rem;
+        }
+
+        .now-page-note a {
+            color: #666666;
+            text-decoration: underline;
+        }
+
+        .now-page-note a:hover {
+            color: #000000;
+        }
+
+        .contact-link {
+            margin-top: 2rem;
             text-align: center;
         }
 
@@ -254,54 +279,41 @@
     <nav>
         <ul>
             <li><a href="index.html"><strong>Ken</strong></a></li>
-            <li><a href="blog.html">Blog</a></li>
+            <li><a href="writing.html">Writing</a></li>
             <li><a href="now.html" class="active">Now</a></li>
-            <li><a href="quotes.html">Quotes</a></li>
-            <li><a href="book-registry.html">Book Registry</a></li>
         </ul>
     </nav>
 
     <main>
         <div class="now-header">
-            <p>This season’s focus and pursuits </p>
-            <p>Updated January 7th, 2026.</p> 
+            <h2>Now</h2>
+            <p>Updated January 24th, 2026.</p> 
         </div>
 
         <div class="now-content">
 
-            <h3>Creating versus Consuming</h3>
+            <h3>Focusing on</h3>
             <p>Favoring output over noise</p>
-            <ul>
-                <li>This website : Learning how to code and the first steps of building a homebase for tinkerers</li>
-                <li>DJing : Most of my listening is consumed by live DJ shows, why not make my own sets?</li>
-            </ul>
+            <p>Health, relationships, DJing & building this website.</p>
 
             <h3>Reading</h3>
             <p>For thinking, generating ideas and exploring perspectives</p>
-            <ul>
-                <li>The Bitcoin Standard by Saifedean Ammous</li>
-                <li>A Thousand Blues by Cheon Seon-ran</li>
-            </ul>
+            <p>Past books I've read can be found <a href="book-registry.html">here</a>. </p>
+           
 
-            <h3>Focusing on</h3>
+            <h3>Thinking about</h3>
             <ul>
-                <li>Health : Calisthenics, sleep and diet</li>
-                <li>Relationships : Strengthening meaningful connections</li>
-                <li>AI : Exploring new tools and implementing them into my workflow</li>
+                <li>Systematizing my work through software. </li>
+                <li>The impocation of AI on productivity & innovation. </li>
+                <li>The rise of generalist leaders in this new environment. </li>
             </ul>
-
-            <p>This is a now page. If you have your own site, <a href="https://nownownow.com/about">you should make one too</a>.</p> 
         </div>
 
+        <div class="now-page-note">
+            <p>This is a now page. If you have your own site, <a href="https://nownownow.com/about">you should make one too</a>.</p>
+        </div>
         
     </main>
-
-    <footer>
-        <div class="contact-link">
-            <p><a href="contact.html">Get In Touch</a></p>
-       </div>
-       <p>&copy; 2025 Ken Gatera. All rights reserved.</p>
-    </footer>
 </body>
 </html>
 
